<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark">

    <!-- The song's art. Default is a music note. -->
    <ImageView
        android:id="@+id/song_art"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/primary"
        android:contentDescription="@string/song_art_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_music_note"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Tells the elapsed time of currently playing song-->
    <TextView
        android:id="@+id/player_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/unknown_time"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/play_pause_button"
        app:layout_constraintEnd_toStartOf="@id/player_seek_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_artist_text" />

    <!-- Tells the remaining time of currently playing song-->
    <TextView
        android:id="@+id/player_remaining_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/unknown_time"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/play_pause_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/song_artist_text" />

    <TextView
        android:id="@+id/song_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknown_song"
        android:textColor="@color/songTitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/song_artist_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/song_art"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/song_artist_text"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/unknown_artist"
        android:textColor="@color/artistName"
        app:layout_constraintBottom_toTopOf="@+id/player_seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/song_title_text" />

    <SeekBar
        android:id="@+id/player_seek_bar"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:max="100"
        android:progress="42"
        app:layout_constraintBottom_toTopOf="@id/play_pause_button"
        app:layout_constraintEnd_toStartOf="@id/player_remaining_time"
        app:layout_constraintStart_toEndOf="@id/player_current_time"
        app:layout_constraintTop_toBottomOf="@id/song_artist_text" />

    <!-- For controlling the state of the MediaPlayer -->
    <ImageButton
        android:id="@+id/play_pause_button"
        android:layout_width="@dimen/play_pause_button_size"
        android:layout_height="@dimen/play_pause_button_size"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/play_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/next_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/prev_button"
        app:layout_constraintTop_toBottomOf="@+id/player_seek_bar" />

    <ImageButton
        android:id="@+id/prev_button"
        android:layout_width="@dimen/player_buttons_size"
        android:layout_height="@dimen/player_buttons_size"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/prev_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/play_pause_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_seek_bar" />

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="@dimen/player_buttons_size"
        android:layout_height="@dimen/player_buttons_size"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/next_button_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/play_pause_button"
        app:layout_constraintTop_toBottomOf="@id/player_seek_bar" />

</android.support.constraint.ConstraintLayout>